--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -11,6 +11,7 @@
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "../../../node_modules/bootstrap/scss/variables";
 
+
 // Spacing utilities
 $custom-spacers: (
   6: $spacer * 5,
@@ -18,6 +19,31 @@ $custom-spacers: (
   8: $spacer * 9.37,
 );
 
+// $custom-width: 
+//   (
+//     "width": (
+//       property: width,
+//       class: w,
+//       values: (
+//         25: 25%,
+//         50: 50%,
+//         75: 75%,
+//         100: 100%,
+//         auto: auto,
+//         10: 10%,
+//         20: 20%,
+//         30: 30%,
+//         40: 40%,
+//         60: 60%,
+//         70: 70%,
+//         80: 80%,
+//         90: 90%
+//       ),
+//     ),
+//   );
+
+// Adding utilities
+// $utilities: map-merge($utilities, $custom-width);
 $spacers: map-merge($custom-spacers, $spacers);
 
 // import the main boostrap
