--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,9 +56,14 @@ body {
 }
 
 /* ICONS */
-.icon-size-sm {
+.icon-size-md {
 	width: 1.5rem;
 	height: 1.5rem;
+}
+
+.icon-size-sm {
+	width: 1.25rem;
+	height: 1.25rem;
 }
 
 /* BUTTONS */
@@ -69,6 +74,14 @@ body {
 .button-padding-md {
 	padding-top: 0.9rem;
 	padding-bottom: 0.9rem;
+}
+
+.btn-side-navigation {
+	width: 100%;
+	color: white;
+	font-weight: 600;
+	text-align: left;
+	background-color: #e63946;
 }
 
 /* FORMS COMPONENTS */
