--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -7,6 +7,9 @@
 // $h4-font-size:                $font-size-base * 1.5;
 // $h5-font-size:                $font-size-base * 1.25;
 // $h6-font-size:                $font-size-base;
+
+$primary: #28A745;
+$dark: #1D3557;
 // add the functions and variables in order to add more maps values
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "../../../node_modules/bootstrap/scss/variables";
