--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -9,6 +9,8 @@
 // $h6-font-size:                $font-size-base;
 
 $primary: #28A745;
+$secondary: #457B9D;
+$danger: #E63946;
 $dark: #1D3557;
 // add the functions and variables in order to add more maps values
 @import "../../../node_modules/bootstrap/scss/functions";
