--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -15,7 +15,25 @@ $dark: #1D3557;
 // add the functions and variables in order to add more maps values
 @import "../../../node_modules/bootstrap/scss/functions";
 @import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/maps";
+@import "../../../node_modules/bootstrap/scss/mixins";
+@import "../../../node_modules/bootstrap/scss/utilities";
 
+// Sizing utilities
+$utilities: map-merge(
+  $utilities,
+  (
+    "width": map-merge(
+      map-get($utilities, "width"),
+      (
+        values: map-merge(
+          map-get(map-get($utilities, "width"), "values"),
+          (10: 10%, 20: 20%, 30: 30%, 40: 40%, 50: 50%),
+        ),
+      ),
+    ),
+  )
+);
 
 // Spacing utilities
 $custom-spacers: (
@@ -27,6 +45,7 @@ $custom-spacers: (
 // Adding utilities
 $spacers: map-merge($custom-spacers, $spacers);
 
+@import "../../../node_modules/bootstrap/scss/utilities/api";
 // import the main boostrap
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
