Added: Discount and computing total

--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -46,6 +46,13 @@ $utilities: map-merge(
   ),
 );
 
+// media query
+@include media-breakpoint-down(md) {
+  .text-date {
+    font-size: 2rem !important;
+  }
+}
+
 // import the main boostrap
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
