--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
 	--success: #28a745;
 	--smoke-white: #f1faee;
 	--input-border: #6f6f6f;
+	--back-order: #ffd651;
 }
 
 /* whole page */
@@ -194,6 +195,10 @@ label {
 .table-fixed {
 	overflow-y: scroll;
 	height: fit-content;
+}
+
+.item-back-order {
+	background-color: var(--back-order);
 }
 
 /* DROP DOWN FOR INVENTORY SEARCHING */
