[IMP] Delivery.js: Subtracting the received qty to the ordered qty. Medicine: adding the received qty to the product stock

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -201,6 +201,10 @@ label {
 	background-color: var(--back-order);
 }
 
+.item-received {
+	background-color: var(--success);
+}
+
 /* DROP DOWN FOR INVENTORY SEARCHING */
 .search-inner {
 	position: relative;
