--- a/client/src/index.css
+++ b/client/src/index.css
@@ -163,12 +163,16 @@ body {
 	border-radius: 5px;
 	color: var(--input-border);
 	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
+	font-size: 0.9rem;
+}
+
+input {
+	font-size: 0.9rem;
 }
 
 label {
 	font-size: 0.9rem;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 }
 
 /* adding required icon into label */
