[FXD] Changing form validation using react

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,6 +72,13 @@ body {
 	font-size: 1.5rem;
 }
 
+.text-error {
+	font-size: 0.8rem;
+	margin: 0;
+	padding: 0;
+	color: var(--cherry);
+}
+
 th {
 	font-size: 0.9rem;
 	font-weight: 500;
