[FXD] POS UI and currency format

--- a/client/src/style/sass/main.scss
+++ b/client/src/style/sass/main.scss
@@ -50,9 +50,15 @@ $utilities: map-merge(
 // media query
 @include media-breakpoint-down(md) {
   .text-date {
-    font-size: 2rem !important;
+    display: none 
   }
 }
+
+// @include media-breakpoint-up(sm) {
+//   .text-date {
+//     font-size: .5rem;
+//   }
+// }
 
 // import the main boostrap
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
