--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,15 +61,24 @@ body {
 }
 
 .text-date {
-	font-size: 2rem;
+	font-size: 1.5rem;
+	margin: 0;
+	padding: 0;
 }
 
 .text-time {
 	font-size: 1rem;
+	margin: 0;
+	padding: 0;
 }
 
 .text-total {
 	font-size: 1.5rem;
+}
+
+.text-currency {
+	font-size: 3rem;
+	text-align: right;
 }
 
 .text-error {
@@ -86,6 +95,16 @@ th {
 
 td {
 	font-size: 0.9rem;
+}
+
+.currency-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.text-right {
+	text-align: right;
 }
 
 /* NAVIGATION */
